// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultLayout matches snapshot when data is fetched successfully 1`] = `
<DocumentFragment>
  <div>
    Header
  </div>
  <div>
    CategoriesSection
  </div>
  <div>
    CategoryList
  </div>
  <section
    class="content"
  />
</DocumentFragment>
`;

exports[`DefaultLayout matches snapshot when loading 1`] = `
<DocumentFragment>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;

exports[`DefaultLayout matches snapshot when there is an error fetching categories 1`] = `
<DocumentFragment>
  <div>
    Header
  </div>
  <div>
    CategoriesSection
  </div>
  <section
    class="categoryListSkeleton"
  >
    <div
      class="curatedListSkeleton"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 240px; height: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="categoryItemSkeleton"
      data-testid="skeleton-item"
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 40px; height: 40px; border-radius: 50%;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 120px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </section>
  <section
    class="content"
  />
</DocumentFragment>
`;
